fixed automated LieferID & LieferpositionNr generation